Use ISO-8859-1 (and convert from/to desktop charset ) for audio tags.

--- a/.settings
+++ b/.settings
@@ -747,7 +747,7 @@ SearchString=True
 File[1]=".src/Form/XConfigureAudioDriver.form"
 File[2]=".src/Form/XConfigureAudioDriver.class:286.6"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:1141.19"
+File[4]=".src/Form/FMain.class:5259.13"
 File[5]=".src/Classi/MplayerClass.class:288.4"
 File[6]=".src/Form/RealtimeForm.form"
 File[7]=".src/Form/AudioEqualizer.form"
@@ -755,8 +755,8 @@ File[8]=".src/Form/VideoEqualizer.form"
 File[9]=".src/Form/VideoEqualizer.class:13.15"
 File[10]=".src/Form/HotKeys.form"
 Active=11
-File[11]="CHANGELOG_GIT:4.65"
-File[12]="AA_ToDo:58.54"
+File[11]="CHANGELOG_GIT:3.2"
+File[12]="AA_ToDo:27.27"
 File[13]=".src/0_Moduli/Global.module:165.10"
 File[14]=".src/Form/GeneralOptions.class:910.0"
 Fold[14]=[825]
@@ -776,7 +776,8 @@ File[27]=".src/Form/AudioForm.class:102.7"
 File[28]=".src/Classi/Meters.class:61.0"
 File[29]=".src/Form/CoverManager.class:265.20"
 File[30]=".src/Form/AudioForm.form"
-Count=30
+File[31]=".src/Classi/TagLib.class:186.14"
+Count=31
 
 [Watches]
 Count=11
