Display red text (possible clipping) when volume > 100%

--- a/.settings
+++ b/.settings
@@ -1,5 +1,5 @@
 [Breakpoints]
-Breakpoint[1]="FMain.7544"
+Breakpoint[1]="FMain.7547"
 Count=1
 
 [DebugWindow]
@@ -744,14 +744,15 @@ SearchString=True
 
 [OpenFile]
 Active=1
-File[1]="CHANGELOG_GIT:3.2"
+File[1]="CHANGELOG_GIT:3.10"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:2836.110"
+File[4]=".src/Form/FMain.class:2849.0"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
-Count=7
+File[8]=".src/Form/GeneralOptions.class:0.0"
+Count=8
 
 [Watches]
 Count=11
