--- a/.settings
+++ b/.settings
@@ -1,5 +1,5 @@
 [Breakpoints]
-Breakpoint[1]="FMain.7547"
+Breakpoint[1]="FMain.7548"
 Count=1
 
 [DebugWindow]
@@ -743,16 +743,19 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-Active=1
-File[1]="CHANGELOG_GIT:3.10"
+File[1]="CHANGELOG_GIT:16.43"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:2849.0"
+Active=4
+File[4]=".src/Form/FMain.class:2844.48"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
 File[8]=".src/Form/GeneralOptions.class:0.0"
-Count=8
+File[9]=".src/Form/AudioForm.form"
+File[10]=".src/Form/AudioForm.class:0.0"
+File[11]="AA_ToDo:0.0"
+Count=11
 
 [Watches]
 Count=11
