--- a/.settings
+++ b/.settings
@@ -1,5 +1,5 @@
 [Breakpoints]
-Breakpoint[1]="FMain.7549"
+Breakpoint[1]="FMain.7553"
 Count=1
 
 [DebugWindow]
@@ -746,7 +746,8 @@ SearchString=True
 File[1]="CHANGELOG_GIT:16.43"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:6558.71"
+Active=4
+File[4]=".src/Form/FMain.class:1100.9"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
@@ -754,9 +755,9 @@ File[8]=".src/Form/GeneralOptions.class:0.0"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:0.0"
 File[11]="AA_ToDo:0.0"
-Active=12
-File[12]=".src/Classi/MplayerClass.class:207.83"
-Count=12
+File[12]=".src/Classi/MplayerClass.class:218.56"
+File[13]=".src/Classi/FlashClass.class:120.88"
+Count=13
 
 [Watches]
 Count=11
