--- a/.settings
+++ b/.settings
@@ -743,21 +743,23 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]="CHANGELOG_GIT:16.43"
+Active=1
+File[1]="CHANGELOG_GIT:3.75"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:1100.9"
+File[4]=".src/Form/FMain.class:3592.20"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
-Active=8
 File[8]=".src/Form/GeneralOptions.class:414.19"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:0.0"
-File[11]="AA_ToDo:0.0"
+File[11]="AA_ToDo:58.47"
 File[12]=".src/Classi/MplayerClass.class:218.56"
 File[13]=".src/Classi/FlashClass.class:120.88"
-Count=13
+File[14]=".src/Form/VideoEqualizer.form"
+File[15]=".src/Form/VideoEqualizer.class:74.7"
+Count=15
 
 [Watches]
 Count=11
