--- a/.settings
+++ b/.settings
@@ -750,14 +750,14 @@ SearchString=True
 
 [OpenFile]
 Active=1
-File[1]="CHANGELOG_GIT:4.2"
+File[1]="CHANGELOG_GIT:3.56"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
 File[4]=".src/Form/FMain.class:777.23"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
-File[8]=".src/Form/GeneralOptions.class:732.44"
+File[8]=".src/Form/GeneralOptions.class:190.0"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:0.0"
 File[11]="AA_ToDo:58.47"
@@ -766,7 +766,8 @@ File[13]=".src/Classi/FlashClass.class:120.88"
 File[14]=".src/Form/VideoEqualizer.form"
 File[15]=".src/Form/VideoEqualizer.class:74.7"
 File[16]=".src/0_Moduli/Global.module:472.25"
-Count=16
+File[17]=".src/Classi/SettingsClass.class:632.24"
+Count=17
 
 [Watches]
 Count=11
