--- a/.settings
+++ b/.settings
@@ -749,28 +749,29 @@ SearchString=True
 
 [OpenFile]
 Active=1
-File[1]="CHANGELOG_GIT:3.90"
+File[1]="CHANGELOG_GIT:3.2"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:1301.30"
+File[4]=".src/Form/FMain.class:3454.5"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
-File[8]=".src/Form/GeneralOptions.class:190.0"
+File[8]=".src/Form/GeneralOptions.class:856.17"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:0.0"
-File[11]="AA_ToDo:58.47"
+File[11]="AA_ToDo:68.0"
 File[12]=".src/Classi/MplayerClass.class:1057.56"
 File[13]=".src/Classi/FlashClass.class:120.88"
 File[14]=".src/Form/VideoEqualizer.form"
 File[15]=".src/Form/VideoEqualizer.class:74.7"
 File[16]=".src/0_Moduli/Global.module:472.25"
-File[17]=".src/Classi/SettingsClass.class:632.24"
+File[17]=".src/Classi/SettingsClass.class:604.2"
 File[18]=".src/Form/RealtimeForm.form"
 File[19]=".src/Form/RealtimeForm.class:4.36"
 File[20]=".src/Form/ChooseAspect.form"
 File[21]=".src/Form/ChooseAspect.class:32.25"
-Count=21
+File[22]=".src/Form/DVBTuner.form"
+Count=22
 
 [Watches]
 Count=11
