--- a/.settings
+++ b/.settings
@@ -79,6 +79,9 @@ Geometry=[0,0,301,301]
 [DebugWindow/CoverCacheList]
 Geometry=[-42,587,344,344]
 
+[DebugWindow/CoverManager]
+Geometry=[48,-4,210,210]
+
 [DebugWindow/CurrentParams]
 Geometry=[0,0,301,301]
 
@@ -225,6 +228,9 @@ Geometry=[0,0,301,301]
 
 [DebugWindow/MyGrid]
 Geometry=[0,41,344,344]
+
+[DebugWindow/MyGrid.Data.Picture]
+Geometry=[48,-4,210,210]
 
 [DebugWindow/MyGrid.Font]
 Geometry=[0,41,344,344]
@@ -487,6 +493,9 @@ Geometry=[0,0,344,344]
 [DebugWindow/control]
 Geometry=[0,0,301,301]
 
+[DebugWindow/covermanager.coverpicture(CoverManager.coverfile(artist, album), fullpath, rowheight)]
+Geometry=[48,-4,210,210]
+
 [DebugWindow/devices]
 Geometry=[48,-4,210,210]
 
@@ -706,6 +715,15 @@ Geometry=[0,0,301,301]
 [DebugWindow/tl]
 Geometry=[0,0,210,210]
 
+[DebugWindow/tmpimage.Picture]
+Geometry=[48,-4,210,210]
+
+[DebugWindow/tmpimage.Stretch(width, width)]
+Geometry=[48,-4,210,210]
+
+[DebugWindow/tmppic]
+Geometry=[48,-4,210,210]
+
 [DebugWindow/tmppicture]
 Geometry=[0,0,344,344]
 
@@ -749,29 +767,35 @@ SearchString=True
 
 [OpenFile]
 Active=1
-File[1]="CHANGELOG_GIT:4.2"
+File[1]="CHANGELOG_GIT:3.49"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:6098.2"
+File[4]=".src/Form/FMain.class:4371.28"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
 File[8]=".src/Form/GeneralOptions.class:856.17"
 File[9]=".src/Form/AudioForm.form"
-File[10]=".src/Form/AudioForm.class:0.0"
-File[11]="AA_ToDo:68.0"
+File[10]=".src/Form/AudioForm.class:72.25"
+File[11]="AA_ToDo:62.0"
 File[12]=".src/Classi/MplayerClass.class:1057.56"
 File[13]=".src/Classi/FlashClass.class:120.88"
 File[14]=".src/Form/VideoEqualizer.form"
 File[15]=".src/Form/VideoEqualizer.class:74.7"
-File[16]=".src/0_Moduli/Global.module:472.25"
+File[16]=".src/0_Moduli/Global.module:137.12"
 File[17]=".src/Classi/SettingsClass.class:457.27"
 File[18]=".src/Form/RealtimeForm.form"
 File[19]=".src/Form/RealtimeForm.class:4.36"
 File[20]=".src/Form/ChooseAspect.form"
 File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
-Count=22
+File[23]=".src/Classi/TagLib.class:16.33"
+File[24]=".src/Form/CoverManager.class:240.0"
+File[25]=".src/Classi/PlaylistClass.class:676.36"
+File[26]=".src/Form/CoverManager.form"
+File[27]=".src/Form/AudioEqualizer.form"
+File[28]="amarok_random.png"
+Count=28
 
 [Watches]
 Count=11
