Remove cover caches when updating a library/playlist item

--- a/.settings
+++ b/.settings
@@ -538,6 +538,9 @@ Geometry=[0,0,344,344]
 [DebugWindow/items]
 Geometry=[0,0,2550,412]
 
+[DebugWindow/librarygrid]
+Geometry=[51,0,210,210]
+
 [DebugWindow/lines]
 Geometry=[0,0,1186,344]
 
@@ -766,10 +769,11 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]="CHANGELOG_GIT:18.45"
+Active=1
+File[1]="CHANGELOG_GIT:12.67"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:4371.28"
+File[4]=".src/Form/FMain.class:2410.26"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
@@ -777,25 +781,26 @@ File[8]=".src/Form/GeneralOptions.class:856.17"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:72.25"
 File[11]="AA_ToDo:62.0"
-File[12]=".src/Classi/MplayerClass.class:1057.56"
+File[12]=".src/Classi/MplayerClass.class:908.16"
 File[13]=".src/Classi/FlashClass.class:120.88"
 File[14]=".src/Form/VideoEqualizer.form"
 File[15]=".src/Form/VideoEqualizer.class:74.7"
-File[16]=".src/0_Moduli/Global.module:137.12"
+File[16]=".src/0_Moduli/Global.module:243.0"
 File[17]=".src/Classi/SettingsClass.class:457.27"
 File[18]=".src/Form/RealtimeForm.form"
-File[19]=".src/Form/RealtimeForm.class:4.36"
+File[19]=".src/Form/RealtimeForm.class:114.36"
 File[20]=".src/Form/ChooseAspect.form"
 File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
 File[23]=".src/Classi/TagLib.class:16.33"
-Active=24
-File[24]=".src/Form/CoverManager.class:232.19"
-File[25]=".src/Classi/PlaylistClass.class:959.37"
+File[24]=".src/Form/CoverManager.class:139.0"
+File[25]=".src/Classi/PlaylistClass.class:670.35"
 File[26]=".src/Form/CoverManager.form"
 File[27]=".src/Form/AudioEqualizer.form"
 File[28]="amarok_random.png"
-Count=28
+File[29]=".src/Form/OverlayTrayTip.class:52.12"
+File[30]=".src/Classi/Meters.class:50.2"
+Count=30
 
 [Watches]
 Count=11
