--- a/.settings
+++ b/.settings
@@ -82,6 +82,9 @@ Geometry=[-42,587,344,344]
 [DebugWindow/CoverManager]
 Geometry=[48,-4,210,210]
 
+[DebugWindow/CoverQueue.Pop()]
+Geometry=[51,0,210,210]
+
 [DebugWindow/CurrentParams]
 Geometry=[0,0,301,301]
 
@@ -117,6 +120,9 @@ Geometry=[0,0,344,820]
 
 [DebugWindow/ExcludedValues]
 Geometry=[52,0,210,210]
+
+[DebugWindow/FMain]
+Geometry=[51,0,210,210]
 
 [DebugWindow/FMain.mplayer.GetListOf("ao")]
 Geometry=[52,0,222,507]
@@ -466,6 +472,9 @@ Geometry=[52,0,210,831]
 [DebugWindow/VideoChainBox.Children]
 Geometry=[52,0,210,210]
 
+[DebugWindow/WorkingCover]
+Geometry=[51,0,210,210]
+
 [DebugWindow/Youtube.AvailableSubs(VideoId)]
 Geometry=[0,0,344,344]
 
@@ -769,18 +778,18 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-Active=1
-File[1]="CHANGELOG_GIT:12.67"
+File[1]="CHANGELOG_GIT:15.70"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:2410.26"
+File[4]=".src/Form/FMain.class:4903.0"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
 File[8]=".src/Form/GeneralOptions.class:856.17"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:72.25"
-File[11]="AA_ToDo:62.0"
+Active=11
+File[11]="AA_ToDo:67.1"
 File[12]=".src/Classi/MplayerClass.class:908.16"
 File[13]=".src/Classi/FlashClass.class:120.88"
 File[14]=".src/Form/VideoEqualizer.form"
@@ -793,8 +802,8 @@ File[20]=".src/Form/ChooseAspect.form"
 File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
 File[23]=".src/Classi/TagLib.class:16.33"
-File[24]=".src/Form/CoverManager.class:139.0"
-File[25]=".src/Classi/PlaylistClass.class:670.35"
+File[24]=".src/Form/CoverManager.class:858.0"
+File[25]=".src/Classi/PlaylistClass.class:583.43"
 File[26]=".src/Form/CoverManager.form"
 File[27]=".src/Form/AudioEqualizer.form"
 File[28]="amarok_random.png"
