--- a/.settings
+++ b/.settings
@@ -1,8 +1,5 @@
 [Breakpoints]
-Breakpoint[1]="GeneralOptions.920"
-Breakpoint[2]="GeneralOptions.925"
-Breakpoint[3]="GeneralOptions.965"
-Count=3
+Count=0
 
 [DebugWindow]
 Count=0
@@ -652,6 +649,9 @@ Geometry=[0,0,344,344]
 [DebugWindow/picture["filetypeuri.png"]]
 Geometry=[0,0,344,344]
 
+[DebugWindow/picture["youtubeicon.png"]]
+Geometry=[51,0,210,210]
+
 [DebugWindow/picture[global.IconfileOf["browse"]]]
 Geometry=[61,256,344,344]
 
@@ -781,19 +781,19 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]="CHANGELOG_GIT:176.29"
+Active=1
+File[1]="CHANGELOG_GIT:4.10"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-Active=4
-File[4]=".src/Form/FMain.class:7943.7"
+File[4]=".src/Form/FMain.class:414.0"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
-File[8]=".src/Form/GeneralOptions.class:925.25"
+File[8]=".src/Form/GeneralOptions.class:916.19"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:72.25"
-File[11]="AA_ToDo:340.51"
-File[12]=".src/Classi/MplayerClass.class:908.16"
+File[11]="AA_ToDo:71.0"
+File[12]=".src/Classi/MplayerClass.class:1377.21"
 File[13]=".src/Classi/FlashClass.class:142.13"
 File[14]=".src/Form/VideoEqualizer.form"
 File[15]=".src/Form/VideoEqualizer.class:74.7"
@@ -805,7 +805,7 @@ File[20]=".src/Form/ChooseAspect.form"
 File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
 File[23]=".src/Classi/TagLib.class:16.33"
-File[24]=".src/Form/CoverManager.class:841.35"
+File[24]=".src/Form/CoverManager.class:822.40"
 File[25]=".src/Classi/PlaylistClass.class:404.31"
 File[26]=".src/Form/CoverManager.form"
 File[27]=".src/Form/AudioEqualizer.form"
