--- a/.settings
+++ b/.settings
@@ -295,6 +295,9 @@ Geometry=[0,0,1014,714]
 [DebugWindow/PTableFile]
 Geometry=[0,0,975,310]
 
+[DebugWindow/PlayListGrid[PlayListGrid.row, myplaylist.ColumnIndex["Filename"]]]
+Geometry=[51,0,210,210]
+
 [DebugWindow/Playlistfile]
 Geometry=[0,0,645,980]
 
@@ -781,23 +784,22 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-Active=1
-File[1]="CHANGELOG_GIT:4.10"
+File[1]="CHANGELOG_GIT:29.60"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:414.0"
+File[4]=".src/Form/FMain.class:845.68"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
-File[8]=".src/Form/GeneralOptions.class:916.19"
+File[8]=".src/Form/GeneralOptions.class:917.2"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:72.25"
-File[11]="AA_ToDo:71.0"
-File[12]=".src/Classi/MplayerClass.class:1377.21"
+File[11]="AA_ToDo:60.96"
+File[12]=".src/Classi/MplayerClass.class:1409.31"
 File[13]=".src/Classi/FlashClass.class:142.13"
 File[14]=".src/Form/VideoEqualizer.form"
 File[15]=".src/Form/VideoEqualizer.class:74.7"
-File[16]=".src/0_Moduli/Global.module:243.0"
+File[16]=".src/0_Moduli/Global.module:812.70"
 File[17]=".src/Classi/SettingsClass.class:457.27"
 File[18]=".src/Form/RealtimeForm.form"
 File[19]=".src/Form/RealtimeForm.class:114.36"
@@ -805,8 +807,9 @@ File[20]=".src/Form/ChooseAspect.form"
 File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
 File[23]=".src/Classi/TagLib.class:16.33"
-File[24]=".src/Form/CoverManager.class:822.40"
-File[25]=".src/Classi/PlaylistClass.class:404.31"
+Active=24
+File[24]=".src/Form/CoverManager.class:666.26"
+File[25]=".src/Classi/PlaylistClass.class:682.35"
 File[26]=".src/Form/CoverManager.form"
 File[27]=".src/Form/AudioEqualizer.form"
 File[28]="amarok_random.png"
@@ -819,10 +822,14 @@ File[34]="webradio.png"
 File[35]=".src/Form/zzzFake.form"
 File[36]=".src/Form/HotKeyGrab.form"
 File[37]=".src/Form/VFiltersCfg.class:229.11"
-File[38]=".src/Form/LogWindow.class:55.11"
+File[38]=".src/Form/LogWindow.class:62.3"
 File[39]=".src/Form/AFiltersCfg.class:221.11"
 File[40]=".src/Classi/DynaGuiClass.class:266.0"
-Count=40
+File[41]=".src/Form/LogWindow.form"
+File[42]=".src/Form/SubAndOsd.class:237.20"
+File[43]=".src/Form/AddUriForm.class:76.16"
+File[44]=".src/Classi/mpris.class:209.14"
+Count=44
 
 [Watches]
 Count=11
