Added opensubtitles.org menu under the existent subtitle menu (still inactive)

--- a/.settings
+++ b/.settings
@@ -805,9 +805,10 @@ SearchString=True
 File[1]="CHANGELOG_GIT:17.28"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:4834.3"
+File[4]=".src/Form/FMain.class:1731.57"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
+Active=7
 File[7]=".src/Form/GeneralOptions.form"
 File[8]=".src/Form/GeneralOptions.class:933.19"
 File[9]=".src/Form/AudioForm.form"
@@ -826,7 +827,6 @@ File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
 File[23]=".src/Classi/TagLib.class:16.33"
 File[24]=".src/Form/CoverManager.class:402.11"
-Active=25
 File[25]=".src/Classi/PlaylistClass.class:31.0"
 File[26]=".src/Form/CoverManager.form"
 File[27]=".src/Form/AudioEqualizer.form"
@@ -847,7 +847,10 @@ File[41]=".src/Form/LogWindow.form"
 File[42]=".src/Form/SubAndOsd.class:237.20"
 File[43]=".src/Form/AddUriForm.class:76.16"
 File[44]=".src/Classi/mpris.class:209.14"
-Count=44
+File[45]=".src/Classi/OpenSubtitlesAPI.class:12.0"
+File[46]="Hash.py:32.47"
+File[47]=".src/Form/SubAndOsd.form"
+Count=47
 
 [Watches]
 Count=11
