--- a/.project
+++ b/.project
@@ -7,6 +7,7 @@ Version=2.9.1058
 Component=gb.image
 Component=gb.qt4
 Component=gb.form
+Component=gb.compress
 Component=gb.dbus
 Component=gb.desktop
 Component=gb.settings
