--- a/.settings
+++ b/.settings
@@ -415,6 +415,9 @@ Geometry=[0,0,344,344]
 [DebugWindow/Subsettings]
 Geometry=[713,357,210,210]
 
+[DebugWindow/Subtitlesapi]
+Geometry=[51,0,210,210]
+
 [DebugWindow/SwitchSidePanelBTN]
 Geometry=[0,0,344,344]
 
@@ -485,6 +488,9 @@ Geometry=[52,0,210,831]
 Geometry=[52,0,210,210]
 
 [DebugWindow/WorkingCover]
+Geometry=[51,0,210,210]
+
+[DebugWindow/XmlFields]
 Geometry=[51,0,210,210]
 
 [DebugWindow/Youtube.AvailableSubs(VideoId)]
@@ -634,6 +640,9 @@ Geometry=[0,0,301,301]
 [DebugWindow/mystream]
 Geometry=[51,0,210,210]
 
+[DebugWindow/mysub]
+Geometry=[1470,250,668,467]
+
 [DebugWindow/node]
 Geometry=[0,40,1592,525]
 
@@ -664,6 +673,9 @@ Geometry=[0,0,259,330]
 [DebugWindow/panel2]
 Geometry=[0,0,301,301]
 
+[DebugWindow/parentmenu]
+Geometry=[1280,0,210,210]
+
 [DebugWindow/picture]
 Geometry=[0,0,344,344]
 
@@ -693,6 +705,9 @@ Geometry=[0,41,344,344]
 
 [DebugWindow/pps]
 Geometry=[0,404,301,301]
+
+[DebugWindow/preferredlangs]
+Geometry=[1280,0,210,210]
 
 [DebugWindow/ptable]
 Geometry=[0,0,857,540]
@@ -808,19 +823,19 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]="CHANGELOG_GIT:17.28"
+Active=1
+File[1]="CHANGELOG_GIT:3.2"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-Active=4
-File[4]=".src/Form/FMain.class:1885.46"
+File[4]=".src/Form/FMain.class:4367.17"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
-File[8]=".src/Form/GeneralOptions.class:933.19"
+File[8]=".src/Form/GeneralOptions.class:930.30"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:72.25"
-File[11]="AA_ToDo:62.1"
-File[12]=".src/Classi/MplayerClass.class:1409.31"
+File[11]="AA_ToDo:60.56"
+File[12]=".src/Classi/MplayerClass.class:280.31"
 File[13]=".src/Classi/FlashClass.class:142.13"
 File[14]=".src/Form/VideoEqualizer.form"
 File[15]=".src/Form/VideoEqualizer.class:74.7"
@@ -833,7 +848,7 @@ File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
 File[23]=".src/Classi/TagLib.class:16.33"
 File[24]=".src/Form/CoverManager.class:402.11"
-File[25]=".src/Classi/PlaylistClass.class:31.0"
+File[25]=".src/Classi/PlaylistClass.class:254.10"
 File[26]=".src/Form/CoverManager.form"
 File[27]=".src/Form/AudioEqualizer.form"
 File[28]="amarok_random.png"
@@ -853,11 +868,28 @@ File[41]=".src/Form/LogWindow.form"
 File[42]=".src/Form/SubAndOsd.class:237.20"
 File[43]=".src/Form/AddUriForm.class:76.16"
 File[44]=".src/Classi/mpris.class:209.14"
-File[45]=".src/Classi/OpenSubtitlesAPI.class:12.0"
+File[45]=".src/Classi/OpenSubtitlesAPI.class:186.13"
 File[46]="Hash.py:32.47"
 File[47]=".src/Form/SubAndOsd.form"
 File[48]=".src/Form/AllOptions.form"
-Count=48
+File[49]=".src/Classi/WgetClass.class:2.38"
+File[50]="opensubtitles.png"
+File[51]=".src/Form/HotKeyGrab.class:0.0"
+File[52]=".src/Form/XConfigureAudioDriver.form"
+File[53]=".src/Form/XConfigureVideoDriver.form"
+File[54]=".src/Form/XConfigureAudioDriver.class:0.0"
+File[55]=".src/Form/HotKeys.form"
+File[56]=".src/Form/MyAskName.form"
+File[57]=".src/Form/MyQuestion.form"
+File[58]=".src/Form/Searchfields.form"
+File[59]=".src/Form/TextDialog.form"
+File[60]=".src/Form/Xt7Egg.form"
+File[61]=".src/Form/AFiltersCfg.form"
+File[62]=".src/Form/AddUriForm.form"
+File[63]=".src/Form/CountDown.form"
+File[64]=".src/Form/OpenSubtitesForm.form"
+File[65]=".src/Form/OpenSubtitesForm.class:55.2"
+Count=65
 
 [Watches]
 Count=11
