Row highlighting (last?!) fixes

--- a/.settings
+++ b/.settings
@@ -826,10 +826,11 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]="CHANGELOG_GIT:4.2"
+File[1]="CHANGELOG_GIT:3.10"
+Active=2
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:1197.0"
+File[4]=".src/Form/FMain.class:5281.4"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
@@ -850,7 +851,7 @@ File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
 File[23]=".src/Classi/TagLib.class:16.33"
 File[24]=".src/Form/CoverManager.class:868.26"
-File[25]=".src/Classi/PlaylistClass.class:1402.24"
+File[25]=".src/Classi/PlaylistClass.class:590.24"
 File[26]=".src/Form/CoverManager.form"
 File[27]=".src/Form/AudioEqualizer.form"
 File[28]="amarok_random.png"
@@ -867,12 +868,11 @@ File[38]=".src/Form/LogWindow.class:62.3"
 File[39]=".src/Form/AFiltersCfg.class:221.11"
 File[40]=".src/Classi/DynaGuiClass.class:266.0"
 File[41]=".src/Form/LogWindow.form"
-File[42]=".src/Form/SubAndOsd.class:114.0"
+File[42]=".src/Form/SubAndOsd.class:154.6"
 File[43]=".src/Form/AddUriForm.class:41.75"
 File[44]=".src/Classi/mpris.class:209.14"
 File[45]=".src/Classi/OpenSubtitlesAPI.class:186.13"
 File[46]="Hash.py:32.47"
-Active=47
 File[47]=".src/Form/SubAndOsd.form"
 File[48]=".src/Form/AllOptions.form"
 File[49]=".src/Classi/WgetClass.class:2.38"
@@ -891,8 +891,10 @@ File[61]=".src/Form/AFiltersCfg.form"
 File[62]=".src/Form/AddUriForm.form"
 File[63]=".src/Form/CountDown.form"
 File[64]=".src/Form/OpenSubtitesForm.form"
-File[65]=".src/Form/OpenSubtitesForm.class:55.2"
-Count=65
+File[65]=".src/Form/OpenSubtitesForm.class:78.62"
+File[66]=".src/Classi/VSlider.class:30.0"
+File[67]=".src/Form/HotKeys.class:642.2"
+Count=67
 
 [Watches]
 Count=11
