--- a/.settings
+++ b/.settings
@@ -452,7 +452,7 @@ Geometry=[691,104,506,663]
 Geometry=[52,0,344,344]
 
 [DebugWindow/TheObject]
-Geometry=[860,472,344,444]
+Geometry=[860,62,344,854]
 
 [DebugWindow/TheObject.layout]
 Geometry=[-4,-3,210,210]
@@ -548,7 +548,7 @@ Geometry=[0,0,344,344]
 Geometry=[0,0,344,344]
 
 [DebugWindow/generaloptions]
-Geometry=[1280,0,210,210]
+Geometry=[1280,0,497,854]
 
 [DebugWindow/global]
 Geometry=[1280,0,580,802]
@@ -572,7 +572,7 @@ Geometry=[0,0,344,344]
 Geometry=[0,0,2550,412]
 
 [DebugWindow/librarygrid]
-Geometry=[51,0,210,210]
+Geometry=[51,340,614,580]
 
 [DebugWindow/lines]
 Geometry=[0,0,1186,344]
@@ -764,7 +764,7 @@ Geometry=[-4,-3,210,210]
 Geometry=[-4,-3,210,655]
 
 [DebugWindow/theobject]
-Geometry=[1604,276,344,581]
+Geometry=[883,273,344,581]
 
 [DebugWindow/thesettings]
 Geometry=[0,0,301,301]
@@ -826,75 +826,76 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-Active=1
-File[1]="CHANGELOG_GIT:1.38"
+File[1]="CHANGELOG_GIT:2.0"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:8261.91"
+File[4]=".src/Form/FMain.class:419.42"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
-File[8]=".src/Form/GeneralOptions.class:930.30"
+File[8]=".src/Form/GeneralOptions.class:415.22"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:72.25"
-File[11]="AA_ToDo:69.60"
+File[11]="AA_ToDo:76.47"
 File[12]=".src/Classi/MplayerClass.class:235.16"
 File[13]=".src/Classi/FlashClass.class:142.13"
 File[14]=".src/Form/VideoEqualizer.form"
 File[15]=".src/Form/VideoEqualizer.class:74.7"
-File[16]=".src/0_Moduli/Global.module:131.12"
-File[17]=".src/Classi/SettingsClass.class:510.27"
+File[16]=".src/0_Moduli/Global.module:312.70"
+File[17]=".src/Classi/SettingsClass.class:630.0"
 File[18]=".src/Form/RealtimeForm.form"
 File[19]=".src/Form/RealtimeForm.class:114.36"
 File[20]=".src/Form/ChooseAspect.form"
 File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
 File[23]=".src/Classi/TagLib.class:16.33"
-File[24]=".src/Form/CoverManager.class:868.26"
+File[24]=".src/Form/CoverManager.class:1032.0"
 File[25]=".src/Classi/PlaylistClass.class:590.24"
 File[26]=".src/Form/CoverManager.form"
-File[27]=".src/Form/AudioEqualizer.form"
-File[28]="amarok_random.png"
-File[29]=".src/Form/OverlayTrayTip.class:52.12"
-File[30]=".src/Classi/Meters.class:50.2"
-File[31]="shadow.png"
-File[32]="PlaylistTab.png"
-File[33]=".src/Form/DVBTuner.class:0.0"
-File[34]="webradio.png"
-File[35]=".src/Form/zzzFake.form"
-File[36]=".src/Form/HotKeyGrab.form"
-File[37]=".src/Form/VFiltersCfg.class:451.15"
-File[38]=".src/Form/LogWindow.class:62.3"
-File[39]=".src/Form/AFiltersCfg.class:221.11"
-File[40]=".src/Classi/DynaGuiClass.class:266.0"
-File[41]=".src/Form/LogWindow.form"
-File[42]=".src/Form/SubAndOsd.class:154.6"
-File[43]=".src/Form/AddUriForm.class:41.75"
-File[44]=".src/Classi/mpris.class:209.14"
-File[45]=".src/Classi/OpenSubtitlesAPI.class:186.13"
-File[46]="Hash.py:32.47"
-File[47]=".src/Form/SubAndOsd.form"
-File[48]=".src/Form/AllOptions.form"
-File[49]=".src/Classi/WgetClass.class:2.38"
-File[50]="opensubtitles.png"
-File[51]=".src/Form/HotKeyGrab.class:0.0"
-File[52]=".src/Form/XConfigureAudioDriver.form"
-File[53]=".src/Form/XConfigureVideoDriver.form"
-File[54]=".src/Form/XConfigureAudioDriver.class:0.0"
-File[55]=".src/Form/HotKeys.form"
-File[56]=".src/Form/MyAskName.form"
-File[57]=".src/Form/MyQuestion.form"
-File[58]=".src/Form/Searchfields.form"
-File[59]=".src/Form/TextDialog.form"
-File[60]=".src/Form/Xt7Egg.form"
-File[61]=".src/Form/AFiltersCfg.form"
-File[62]=".src/Form/AddUriForm.form"
-File[63]=".src/Form/CountDown.form"
-File[64]=".src/Form/OpenSubtitesForm.form"
-File[65]=".src/Form/OpenSubtitesForm.class:78.62"
-File[66]=".src/Classi/VSlider.class:30.0"
-File[67]=".src/Form/HotKeys.class:642.2"
-Count=67
+File[27]="amarok_random.png"
+File[28]=".src/Form/OverlayTrayTip.class:52.12"
+File[29]=".src/Classi/Meters.class:50.2"
+File[30]="shadow.png"
+File[31]="PlaylistTab.png"
+File[32]=".src/Form/DVBTuner.class:0.0"
+File[33]="webradio.png"
+File[34]=".src/Form/zzzFake.form"
+File[35]=".src/Form/HotKeyGrab.form"
+File[36]=".src/Form/VFiltersCfg.class:451.15"
+File[37]=".src/Form/LogWindow.class:62.3"
+File[38]=".src/Form/AFiltersCfg.class:539.84"
+File[39]=".src/Classi/DynaGuiClass.class:266.0"
+File[40]=".src/Form/LogWindow.form"
+File[41]=".src/Form/SubAndOsd.class:154.6"
+File[42]=".src/Form/AddUriForm.class:41.75"
+File[43]=".src/Classi/mpris.class:209.14"
+File[44]=".src/Classi/OpenSubtitlesAPI.class:186.13"
+File[45]="Hash.py:32.47"
+File[46]=".src/Form/SubAndOsd.form"
+File[47]=".src/Form/AllOptions.form"
+File[48]=".src/Classi/WgetClass.class:2.38"
+File[49]="opensubtitles.png"
+File[50]=".src/Form/HotKeyGrab.class:0.0"
+File[51]=".src/Form/XConfigureAudioDriver.form"
+File[52]=".src/Form/XConfigureVideoDriver.form"
+File[53]=".src/Form/XConfigureAudioDriver.class:0.0"
+File[54]=".src/Form/HotKeys.form"
+File[55]=".src/Form/MyAskName.form"
+File[56]=".src/Form/MyQuestion.form"
+File[57]=".src/Form/Searchfields.form"
+File[58]=".src/Form/TextDialog.form"
+File[59]=".src/Form/Xt7Egg.form"
+File[60]=".src/Form/AFiltersCfg.form"
+File[61]=".src/Form/AddUriForm.form"
+File[62]=".src/Form/CountDown.form"
+File[63]=".src/Form/OpenSubtitesForm.form"
+File[64]=".src/Form/OpenSubtitesForm.class:78.62"
+File[65]=".src/Classi/VSlider.class:30.0"
+File[66]=".src/Form/HotKeys.class:642.2"
+File[67]=".src/Form/Chains.class:69.0"
+Active=68
+File[68]=".hidden/CHANGELOG:0.61"
+Count=68
 
 [Watches]
 Count=11
