--- a/.settings
+++ b/.settings
@@ -721,6 +721,9 @@ Geometry=[48,-4,406,660]
 [DebugWindow/quickcheckbox]
 Geometry=[0,0,301,301]
 
+[DebugWindow/resultlines]
+Geometry=[1364,265,993,778]
+
 [DebugWindow/returnvalue]
 Geometry=[0,41,344,344]
 
@@ -827,18 +830,18 @@ SearchString=True
 
 [OpenFile]
 Active=1
-File[1]="CHANGELOG_GIT:8.66"
+File[1]="CHANGELOG_GIT:36.59"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:7863.68"
+File[4]=".src/Form/FMain.class:8335.3"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
 File[8]=".src/Form/GeneralOptions.class:415.22"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:72.25"
-File[11]="AA_ToDo:76.47"
-File[12]=".src/Classi/MplayerClass.class:235.16"
+File[11]="AA_ToDo:74.63"
+File[12]=".src/Classi/MplayerClass.class:1193.16"
 File[13]=".src/Classi/FlashClass.class:142.13"
 File[14]=".src/Form/VideoEqualizer.form"
 File[15]=".src/Form/VideoEqualizer.class:74.7"
@@ -850,8 +853,8 @@ File[20]=".src/Form/ChooseAspect.form"
 File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
 File[23]=".src/Classi/TagLib.class:16.33"
-File[24]=".src/Form/CoverManager.class:43.36"
-File[25]=".src/Classi/PlaylistClass.class:590.24"
+File[24]=".src/Form/CoverManager.class:67.27"
+File[25]=".src/Classi/PlaylistClass.class:608.8"
 File[26]=".src/Form/CoverManager.form"
 File[27]="amarok_random.png"
 File[28]=".src/Form/OverlayTrayTip.class:52.12"
@@ -870,7 +873,7 @@ File[40]=".src/Form/LogWindow.form"
 File[41]=".src/Form/SubAndOsd.class:154.6"
 File[42]=".src/Form/AddUriForm.class:41.75"
 File[43]=".src/Classi/mpris.class:209.14"
-File[44]=".src/Classi/OpenSubtitlesAPI.class:186.13"
+File[44]=".src/Classi/OpenSubtitlesAPI.class:9.0"
 File[45]="Hash.py:32.47"
 File[46]=".src/Form/SubAndOsd.form"
 File[47]=".src/Form/AllOptions.form"
@@ -890,12 +893,13 @@ File[60]=".src/Form/AFiltersCfg.form"
 File[61]=".src/Form/AddUriForm.form"
 File[62]=".src/Form/CountDown.form"
 File[63]=".src/Form/OpenSubtitesForm.form"
-File[64]=".src/Form/OpenSubtitesForm.class:78.62"
+File[64]=".src/Form/OpenSubtitesForm.class:42.2"
 File[65]=".src/Classi/VSlider.class:30.0"
 File[66]=".src/Form/HotKeys.class:642.2"
 File[67]=".src/Form/Chains.class:69.0"
 File[68]=".hidden/CHANGELOG:0.0"
-Count=68
+File[69]=".src/Form/MyAskName.class:19.11"
+Count=69
 
 [Watches]
 Count=11
