Segmentation fault with gambas 3.1 fixed

--- a/.settings
+++ b/.settings
@@ -832,11 +832,10 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]="CHANGELOG_GIT:27.36"
+File[1]="CHANGELOG_GIT:5.10"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-Active=4
-File[4]=".src/Form/FMain.class:8268.0"
+File[4]=".src/Form/FMain.class:8263.58"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
@@ -856,7 +855,8 @@ File[20]=".src/Form/ChooseAspect.form"
 File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
 File[23]=".src/Classi/TagLib.class:42.41"
-File[24]=".src/Form/CoverManager.class:491.3"
+Active=24
+File[24]=".src/Form/CoverManager.class:250.0"
 File[25]=".src/Classi/PlaylistClass.class:679.30"
 File[26]=".src/Form/CoverManager.form"
 File[27]="amarok_random.png"
@@ -902,7 +902,8 @@ File[66]=".src/Form/HotKeys.class:642.2"
 File[67]=".src/Form/Chains.class:69.0"
 File[68]=".hidden/CHANGELOG:0.0"
 File[69]=".src/Form/MyAskName.class:58.38"
-Count=69
+File[70]="configure.png"
+Count=70
 
 [Watches]
 Count=11
