--- a/.settings
+++ b/.settings
@@ -239,7 +239,7 @@ Geometry=[304,489,761,765]
 Geometry=[0,0,301,301]
 
 [DebugWindow/MyGrid]
-Geometry=[0,41,344,344]
+Geometry=[51,41,344,344]
 
 [DebugWindow/MyGrid.Data.Picture]
 Geometry=[48,-4,210,210]
@@ -608,7 +608,10 @@ Geometry=[0,0,301,301]
 Geometry=[52,0,606,604]
 
 [DebugWindow/mygrid]
-Geometry=[0,41,344,344]
+Geometry=[51,41,483,383]
+
+[DebugWindow/mygrid.Rows]
+Geometry=[1280,0,210,210]
 
 [DebugWindow/mygrid.font]
 Geometry=[224,159,344,344]
@@ -832,19 +835,20 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]="CHANGELOG_GIT:5.10"
+Active=1
+File[1]="CHANGELOG_GIT:8.10"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:8263.58"
+File[4]=".src/Form/FMain.class:6991.0"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
-File[8]=".src/Form/GeneralOptions.class:996.0"
+File[8]=".src/Form/GeneralOptions.class:933.42"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:72.25"
 File[11]="AA_ToDo:86.2"
 File[12]=".src/Classi/MplayerClass.class:601.47"
-File[13]=".src/Classi/FlashClass.class:142.13"
+File[13]=".src/Classi/FlashClass.class:134.0"
 File[14]=".src/Form/VideoEqualizer.form"
 File[15]=".src/Form/VideoEqualizer.class:74.7"
 File[16]=".src/0_Moduli/Global.module:312.70"
@@ -855,9 +859,8 @@ File[20]=".src/Form/ChooseAspect.form"
 File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
 File[23]=".src/Classi/TagLib.class:42.41"
-Active=24
-File[24]=".src/Form/CoverManager.class:250.0"
-File[25]=".src/Classi/PlaylistClass.class:679.30"
+File[24]=".src/Form/CoverManager.class:0.0"
+File[25]=".src/Classi/PlaylistClass.class:546.28"
 File[26]=".src/Form/CoverManager.form"
 File[27]="amarok_random.png"
 File[28]=".src/Form/OverlayTrayTip.class:52.12"
@@ -898,12 +901,13 @@ File[62]=".src/Form/CountDown.form"
 File[63]=".src/Form/OpenSubtitesForm.form"
 File[64]=".src/Form/OpenSubtitesForm.class:42.2"
 File[65]=".src/Classi/VSlider.class:30.0"
-File[66]=".src/Form/HotKeys.class:642.2"
+File[66]=".src/Form/HotKeys.class:649.2"
 File[67]=".src/Form/Chains.class:69.0"
 File[68]=".hidden/CHANGELOG:0.0"
 File[69]=".src/Form/MyAskName.class:58.38"
 File[70]="configure.png"
-Count=70
+File[71]=".src/Classi/ShoutCastClass.class:262.34"
+Count=71
 
 [Watches]
 Count=11
