--- a/.settings
+++ b/.settings
@@ -844,8 +844,8 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-Active=1
 File[1]="CHANGELOG_GIT:20.46"
+Active=2
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
 File[4]=".src/Form/FMain.class:3329.0"
@@ -916,7 +916,8 @@ File[68]=".hidden/CHANGELOG:0.0"
 File[69]=".src/Form/MyAskName.class:58.38"
 File[70]="configure.png"
 File[71]=".src/Classi/ShoutCastClass.class:262.34"
-Count=71
+File[72]="xt7-player.png"
+Count=72
 
 [Watches]
 Count=11
