--- a/.settings
+++ b/.settings
@@ -268,6 +268,9 @@ Geometry=[0,0,301,301]
 [DebugWindow/MyQuestion]
 Geometry=[-4,-3,210,210]
 
+[DebugWindow/Mygrid.Columns[c]]
+Geometry=[1280,0,210,210]
+
 [DebugWindow/Mylibrary]
 Geometry=[-14,145,344,344]
 
@@ -342,6 +345,9 @@ Geometry=[0,0,1014,714]
 
 [DebugWindow/SearchTerms]
 Geometry=[40,224,301,301]
+
+[DebugWindow/Searchtable]
+Geometry=[1280,0,210,210]
 
 [DebugWindow/Settings]
 Geometry=[539,0,422,351]
@@ -844,23 +850,22 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]="CHANGELOG_GIT:20.46"
-Active=2
+File[1]="CHANGELOG_GIT:3.10"
 File[2]=".src/Form/FMain.form"
 File[3]=".src/Form/OverlayTip.form"
-File[4]=".src/Form/FMain.class:3329.0"
+File[4]=".src/Form/FMain.class:4497.12"
 File[5]=".src/Form/OverlayTrayTip.form"
 File[6]=".src/Form/OverlayTip.class:19.0"
 File[7]=".src/Form/GeneralOptions.form"
 File[8]=".src/Form/GeneralOptions.class:933.42"
 File[9]=".src/Form/AudioForm.form"
 File[10]=".src/Form/AudioForm.class:72.25"
-File[11]="AA_ToDo:88.0"
+File[11]="AA_ToDo:98.70"
 File[12]=".src/Classi/MplayerClass.class:81.16"
 File[13]=".src/Classi/FlashClass.class:134.0"
 File[14]=".src/Form/VideoEqualizer.form"
 File[15]=".src/Form/VideoEqualizer.class:74.7"
-File[16]=".src/0_Moduli/Global.module:312.70"
+File[16]=".src/0_Moduli/Global.module:905.16"
 File[17]=".src/Classi/SettingsClass.class:117.6"
 File[18]=".src/Form/RealtimeForm.form"
 File[19]=".src/Form/RealtimeForm.class:114.36"
@@ -868,8 +873,9 @@ File[20]=".src/Form/ChooseAspect.form"
 File[21]=".src/Form/ChooseAspect.class:32.25"
 File[22]=".src/Form/DVBTuner.form"
 File[23]=".src/Classi/TagLib.class:42.41"
-File[24]=".src/Form/CoverManager.class:0.0"
-File[25]=".src/Classi/PlaylistClass.class:546.28"
+File[24]=".src/Form/CoverManager.class:1091.0"
+Active=25
+File[25]=".src/Classi/PlaylistClass.class:728.0"
 File[26]=".src/Form/CoverManager.form"
 File[27]="amarok_random.png"
 File[28]=".src/Form/OverlayTrayTip.class:52.12"
@@ -908,9 +914,9 @@ File[60]=".src/Form/AFiltersCfg.form"
 File[61]=".src/Form/AddUriForm.form"
 File[62]=".src/Form/CountDown.form"
 File[63]=".src/Form/OpenSubtitesForm.form"
-File[64]=".src/Form/OpenSubtitesForm.class:42.2"
+File[64]=".src/Form/OpenSubtitesForm.class:92.31"
 File[65]=".src/Classi/VSlider.class:30.0"
-File[66]=".src/Form/HotKeys.class:649.2"
+File[66]=".src/Form/HotKeys.class:648.2"
 File[67]=".src/Form/Chains.class:69.0"
 File[68]=".hidden/CHANGELOG:0.0"
 File[69]=".src/Form/MyAskName.class:58.38"
