Split mplayer logs for "-*" for better readablity

--- a/.settings
+++ b/.settings
@@ -106,7 +106,10 @@ Geometry=[0,41,344,344]
 Geometry=[0,0,301,301]
 
 [DebugWindow/DestinationObj]
-Geometry=[0,0,301,301]
+Geometry=[51,0,301,301]
+
+[DebugWindow/DestinationObj.children]
+Geometry=[1280,0,210,210]
 
 [DebugWindow/Dialog]
 Geometry=[0,0,344,344]
