Draw a rounded box under the current albumview item

--- a/.settings
+++ b/.settings
@@ -1,7 +1,6 @@
 [Breakpoints]
-Breakpoint[1]="FMain.4681"
-Breakpoint[2]="GeneralOptions.468"
-Count=2
+Breakpoint[1]="GeneralOptions.468"
+Count=1
 
 [DebugWindow]
 Count=0
@@ -912,9 +911,21 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-Active=1
-File[1]=".src/Form/MyQuestion.class:52.30"
-Count=1
+File[1]=".src/Form/MyQuestion.class:50.37"
+File[2]=".src/Form/LogWindow.class:46.49"
+File[3]=".src/Form/LogWindow.form"
+File[4]=".src/Form/FMain.class:8551.24"
+File[5]="CHANGELOG_GIT:24.0"
+File[6]=".src/Form/CoverManager.class:649.59"
+File[7]=".src/Classi/MplayerClass.class:645.9"
+File[8]=".src/Classi/PlaylistClass.class:43.26"
+File[9]=".src/Form/GeneralOptions.form"
+File[10]=".src/Form/GeneralOptions.class:0.0"
+File[11]="AA_ToDo:98.0"
+Active=12
+File[12]=".src/Classi/AlbumView.class:286.2"
+File[13]=".src/Form/FMain.form"
+Count=13
 
 [Watches]
 Count=12
